2011-11-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-insertItemWithTitle:atIndex:): Set
	the action on the menu item to -_popUpItemAction:.

2011-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSXibLoading.h,
	* Source/GSXibLoader.m: Add decoding of class IBInitialTabViewItemAttribute.

2011-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInfoPanel.m: Tolerate 'Authors' being a string containing
	a single author as well as an array.

2011-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTabView.m: Add some bindings for NSTabView.

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSColorPanel.m: Always send action and colorChanged: when
	the color changes. NSColorPanel is always "continuous" for now...
	to support -isContinuous == NO, we need to augment the API between
	the color panel and the pickers so they can send a message when
	the mouse is released.
	* Source/NSTextView.m: Change typing attributes in response to
	colorChanged:

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m: centerScanRect patch from Sebastian Reitenbach.
	Note that this makes the NSView autoresizing and rounding test pass,
	but the new centerScanRect test I just added fail.

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/gui/NSView/NSView_autoresize_and_rounding.m: Add
	centerScanRect test

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSSavePanel/setDelegate_reload.m: Switch the save panel to
	not show hidden files and remove ".svn" from the expected
	results. This file was never present in an exported directory and
	will no longer exist with SVN 1.7.

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-_popUpItemAction:): Inform bindings
	of the control view that the value has changed.

2011-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibLoading.m ([NSNibConnector-nibInstantiate]): Add
	this method.